[package]
name = "sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "PolyTorus SDK for developers to interact with the 4-layer modular blockchain"
authors = ["quantumshiro"]
license = "MIT"
repository = "https://github.com/quantumshiro/polytorus"
keywords = ["blockchain", "sdk", "polytorus", "modular", "api"]
categories = ["api-bindings", "cryptography", "network-programming"]

[dependencies]
# External wallet dependency
wallet = { git = "https://github.com/PolyTorus/wallet.git" }

# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
log = "0.4"

# Utilities
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.11"

[features]
default = []